// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`element column renderers onRenderPathColumn null target 1`] = `
<AssessmentInstanceDetailsColumn
  customClassName="not-applicable"
  textContent=""
/>
`;

exports[`element column renderers onRenderPathColumn one target 1`] = `
<AssessmentInstanceDetailsColumn
  customClassName="not-applicable"
  textContent="A"
/>
`;

exports[`element column renderers onRenderPathColumn two targets 1`] = `
<AssessmentInstanceDetailsColumn
  customClassName="not-applicable"
  textContent="A;B"
/>
`;

exports[`element column renderers onRenderSnippetColumn null target 1`] = `
<AssessmentInstanceDetailsColumn
  customClassName="not-applicable"
  textContent={null}
/>
`;

exports[`element column renderers onRenderSnippetColumn one target 1`] = `
<AssessmentInstanceDetailsColumn
  customClassName="not-applicable"
  textContent="X"
/>
`;

exports[`element column renderers onRenderSnippetColumn two targets 1`] = `
<AssessmentInstanceDetailsColumn
  customClassName="not-applicable"
  textContent="XY"
/>
`;
